change yml file without sh

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,13 @@ run-standalone-python-tests-on-windows:
     - windows
   script:
     - pip install -r requirements.txt
-    - sh start_tests_Windows.sh
+    # - sh start_tests_Windows.sh
+    - start "" "App\TrashCatWindows\TrashCatWindows.exe"
+    - python -m pytest TestsPython\\tests\\main_menu_page_test.py
+    - python -m pytest TestsPython\\tests\\game_play_test.py
+    - python -m pytest TestsPython\\tests\\start_page_test.py
+
+tskill TrashCatWindows
   artifacts:
     when: always
     expire_in: 10 days
