--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ run-standalone-python-tests-on-windows:
     - windows
   script:
     - pip install -r requirements.txt
-    - .\start_tests_Windows.sh
+    - ./start_tests_Windows.sh
   artifacts:
     when: always
     expire_in: 10 days
