added pytest report files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ App/
 # allure report folders
 allure-report/
 allure-results-html/
+
+# simple pytest report artifacts
+output.json
+pytest_html_report.html
